crates/service/tests/code_action/snapshots/features__code_action__add_result_types__after_loop_keyword.snap
---
source: crates/service/tests/code_action/add_result_types.rs
expression: response
---
[
  {
    "title": "Add result types",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 4,
            "character": 17
          },
          "end": {
            "line": 4,
            "character": 18
          }
        },
        "code": "type-check",
        "message": "",
        "data": [
          "i32"
        ]
      }
    ],
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 9
              },
              "end": {
                "line": 3,
                "character": 9
              }
            },
            "newText": " (result i32)"
          }
        ]
      }
    }
  }
]
